// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`InputBar renders correctly when focused 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ > Type a message...                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`InputBar renders correctly when unfocused 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ > Type a message...                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`InputBar renders with no chat selected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ > Select a chat first                                                                            │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
